[tool.poetry]
name = "python-postgressql"
version = "0.1.0"
description = ""
authors = ["Jonathan Chow <jonathan.chow@mclaren.com>"]

[tool.poetry.dependencies]
python = "^3.7"
psycopg2 = "^2.8.6"
pyyaml = "^5.4.1"
flake8 = "^3.8.4"
uvicorn = "^0.13.3"
fastapi = "^0.63.0"
autopep8 = "^1.5.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
